--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <option value="">Select here</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
-                        <option value="female">Other</option>
+                        <option value="other">Other</option>
                     </select>
                 </div>
                 <div class="inputdiv">
@@ -57,8 +57,8 @@
                     <input type="text" placeholder="Enter weight" id="weight" required aria-required="true" />
                 </div>
                 <div class="inputdiv">
-                    <label for="weight">Height(CM)<span>*</span></label>
-                    <input type="text" placeholder="Enter weight" id="weight" required aria-required="true" />
+                    <label for="height">Height(CM)<span>*</span></label>
+                    <input type="text" placeholder="Enter weight" id="height" required aria-required="true" />
                 </div>
             </fieldset>
 
@@ -77,8 +77,8 @@
             </div>
 
             <div class="inputdiv">
-                <label for="passsword">Password<span>*</span></label>
-                <input type="passsword" placeholder="********" id="passsword" required aria-required="true" />
+                <label for="password">Password<span>*</span></label>
+                <input type="password" placeholder="********" id="password" required aria-required="true" />
             </div>
 
 
